--- a/coffee.html
+++ b/coffee.html
@@ -7,22 +7,29 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm justify-content-center">
-            <img src="images/coffee.jpg" class="rounded float-left" alt="coffee">
-            <ul class="navbar-nav">   
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="coffee.html">Coffee</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="gallery.html">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-md justify-content-center">
+            <a class="navbar-brand" href="index.html">
+                    <img src="images/coffee.jpg" class="rounded float-left d-md-none d-block" alt="coffee">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">Menu</span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">   
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="coffee.html">Coffee</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div class="container-fluid">
             <div class="card-deck">
@@ -35,6 +42,7 @@
                     </div>
                 </div>
             </div>
+            <div class="table-responsive">
             <table class="table table-striped rounded">
                 <thead>
                     <tr>
@@ -43,7 +51,7 @@
                         <th scope="col">Rate</th>
                         <th scope="col">Atmosphere</th>
                         <th scope="col">Staff</th>
-                        <th scope="col">Coffee & Food</th>
+                        <th scope="col">Coffee</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -98,5 +106,10 @@
                 </tbody>
             </table>
         </div>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     </body>
 </html>
